# app/Models/OrderItem.php
@@ -16,4 +16,9 @@ class OrderItem extends Model
 
 
     protected $table = 'order_items';
+
+    public function product()
+    {
+        return $this->belongsTo(\App\Models\Products::class, 'product_id');
+    }
 }
